fixed spacing

--- a/src/features/YieldVault/yieldVault.module.scss
+++ b/src/features/YieldVault/yieldVault.module.scss
@@ -327,6 +327,7 @@
                     line-height: 17px;
                     letter-spacing: 0em;
                     text-align: left;
+                    margin-right: 1px;
                 }
 
                 .currency {
